# bucket

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example_coverage.bktgz  example_merged_file_store.bktgz  example_merged_file_store.db  example_regr_file_store.bktgz  example_regr_file_store.db  example_regr_file_store_filtered.bktgz  license_header.txt  main.js  mkdocs.yml  pyproject.toml
.claude/: launch.json
.github/: RELEASE_AUTOMATION.md  copilot-instructions.md
.github/workflows/: bump-version-on-merge.yml  deploy-viewer.yml  electron-builds.yml  pr-title-check.yml  release-pipeline-gate.yml  tag-release-on-merge.yml  test.yml  token-health-check.yml
bucket/: __init__.py  __main__.py  axis.py  bucket.py  covergroup.py  coverpoint.py  covertop.py
bucket/common/: chain.py  types.py
bucket/rw/: __init__.py  archive.py  common.py  console.py  html.py  json.py  point.py  report.py  sql.py
docs/: add_to_testbench.md  covergroups.md  coverpoints.md  covertop.md  export_and_merge.md  index.md  introduction.md  performance.md  reading_and_writing.md  viewing_coverage.md
electron/: README.md  bucket.icns  bucket_file.icns  build.js  build.sh  clean.sh  main.js  package-lock.json  package.json  preload.js  smoke.js
example/: cats.py  dogs.py  example.py
example/fixtures/: compare_a.bktgz  compare_b.bktgz
examples/pets/: __init__.py  cats.py  common.py  dogs.py  example.py  top.py
examples/riscv_stress/: README.md  benchmark_suite.py  benchmark_test.py  generate_stress_data.py  stress_common.py  stress_example.py  stress_top.py
examples/riscv_stress/stress_modules/: module_00.py  module_01.py  module_02.py  module_03.py  module_04.py  module_05.py  module_06.py  module_07.py  module_08.py  module_09.py
scripts/: bump_version.py
tests/: test_axis.py  test_axis_lookup_semantics.py  test_basic.py  test_bucket_axis_values.py  test_bucket_hit.py  test_cli.py  test_coverpoint_should_sample.py  test_coverpoint_tier_tags.py  test_empty_covergroups.py  utils.py
tests/format_fixtures/: README.md
tests/format_fixtures/v1/: coverage.bktgz  coverage.json  expected.json
tests/format_fixtures/v2/: coverage.bktgz  coverage.json  expected.json
tests/test_rw/: test_backwards_compat.py  test_common.py  test_console.py  test_format_version.py  test_html.py  test_report.py  test_sql_merge.py
tools/: gen_compare_fixtures.py  gen_format_fixtures.py  update_docs_nav.py
tools/perf/: bench_axis_lookup.py  bench_bucket_hit.py  gen_large_viewer_fixture.py
viewer/: README.md  eslint.config.js  index.html  package-lock.json  package.json  pwa-assets.config.js  vite-bundle.config.ts  vite-node.config.ts  vite.config.ts
viewer/scripts/: report.ts  resolve-version.mjs
viewer/src/: global.css  main.tsx  theme.tsx  vite-env.d.ts
viewer/src/components/: CoverageLoadingOverlay.tsx
viewer/src/hooks/: useCoverageCompare.ts  useFileLoader.ts  useFileLoader.tsx
viewer/src/providers/: App.tsx  Theme.tsx
viewer/src/routes/: index.tsx
viewer/src/services/: coverageCompare.test.ts  coverageCompare.ts  coverageComparePatterns.test.ts  coverageComparePatterns.ts  (+13 more)
(+41 files in other folders)
