[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bucket"
version = "2.4.1"
description = "Functional coverage written in Python"
authors = [
    {name = "Stuart Alldred", email = "stuartalldred@gmail.com"},
    {name = "Edward Kotarski", email = "edktrsk@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.3.4",
    "sqlalchemy>=2.0.40",
    "click>=8.1.3",
    "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.0.1,<9",
    "pytest-cov>=4.1.0",
    "mkdocs>=1.6.0",
]

[project.scripts]
bucket = "bucket.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["bucket"]
include = ["viewer/**/*"]
