[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bucket"
dynamic = ["version"]
description = "Functional coverage written in Python"
authors = [
    {name = "Stuart Alldred", email = "stuartalldred@gmail.com"},
    {name = "Edward Kotarski", email = "edktrsk@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.3.4",
    "sqlalchemy>=2.0.40",
    "click>=8.1.3",
    "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.0.1,<9",
    "pytest-cov>=4.1.0",
    "mkdocs>=1.6.0",
]

[project.scripts]
bucket = "bucket.__main__:cli"

[tool.hatch.version]
source = "vcs"

# The viewer is bundled by `npm run bundle` at report time (bucket/rw/html.py),
# so distributions ship its sources but never the generated directories.
# Nested viewer/.gitignore is not consulted by hatchling, so exclude them
# explicitly here.
[tool.hatch.build]
exclude = [
    "viewer/node_modules",
    "viewer/dist",
    "viewer/dev-dist",
    "viewer/coverage",
]

[tool.hatch.build.targets.wheel]
# `packages` is sugar for `only-include`, which limits traversal to the listed
# paths; a plain `include` of viewer files would never match. List both roots.
only-include = ["bucket", "viewer"]
